@@ -1,5 +1,9 @@
 2007-07-31  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* vc-bzr.el: New file (copied from the trunk).
+
+	* vc-hooks.el (vc-handled-backends): Add BZR.
+
 	* server.el (server-window): Add switch-to-buffer-other-frame option.
 
 2007-07-30  Dan Nicolaescu  <dann@ics.uci.edu>
